# trailer-trash

./: COPYING  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
eclipse-template/TrailerTest/: cproject  project
eclipse-template/TrailerTrash/: cproject  project
eclipse-template/trailer/: cproject  project
eclipse-template/tt/: cproject  project
exe/: trailer.cpp  tt.cpp
include/: CanSet.h  CommandLine.h  Common.h  ConsoleExecuter.h  EventSerialization.h  FullScreen.h  JobQueue.h  NcursesUtil.h  RemoteDirectoryUpdater.h  RemoteTrashEvent.h  ScreenColors.h  TrashCan.h  TrashEvent.h  TrashScreen.h  UserConfiguration.h  XmlUtil.h
replacer/: Replacer.java
src/: CanSet.cpp  CommandLine.cpp  ConsoleExecuter.cpp  EventSerialization.cpp  FullScreen.cpp  JobQueue.cpp  Makefile.am  Makefile.in  RemoteDirectoryUpdater.cpp  RemoteTrashEvent.cpp  ScreenColors.cpp  TrashCan.cpp  TrashScreen.cpp  UserConfiguration.cpp
test/: main.cpp
